更新 index.html via EZPage

--- a/index.html
+++ b/index.html
@@ -301,6 +301,46 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Day 4 -->
+            <div class="bg-white rounded-2xl p-4 card-shadow">
+                <div class="flex justify-between items-center mb-3">
+                    <span class="bg-brand-yellow text-brand-dark px-3 py-1 rounded-full text-sm font-bold">Day 4 (01/23)</span>
+                    <span class="text-gray-500 font-medium">快樂賦歸</span>
+                </div>
+                <div class="space-y-6 relative pl-4 border-l-2 border-gray-200 ml-2">
+                    <div class="relative">
+                        <div class="absolute -left-[21px] top-1 w-3 h-3 bg-brand-yellow rounded-full border-2 border-white"></div>
+                        <span class="text-brand-yellow font-bold font-mono text-sm block mb-1">07:00 / 07:30</span>
+                        <p class="font-bold text-lg">晨喚 / 享用美味早餐</p>
+                        <p class="text-sm text-gray-500">07:30 - 08:30 用餐</p>
+                    </div>
+                    <div class="relative">
+                        <div class="absolute -left-[21px] top-1 w-3 h-3 bg-gray-300 rounded-full border-2 border-white"></div>
+                        <span class="text-gray-500 font-bold font-mono text-sm block mb-1">09:30 - 13:30</span>
+                        <div class="flex items-center flex-wrap">
+                            <p class="font-bold text-lg mr-2">麗寶樂園 + Outlet</p>
+                            <a href="https://www.google.com/maps/search/?api=1&query=麗寶樂園" target="_blank" class="inline-flex items-center px-2 py-1 rounded-full text-xs font-bold bg-brand-yellow/10 text-brand-dark hover:bg-brand-yellow hover:text-white transition-colors">
+                                <i class="ph-bold ph-navigation-arrow mr-1"></i> 導航
+                            </a>
+                        </div>
+                        <p class="text-sm text-gray-500">探索樂園與購物樂趣</p>
+                        <span class="inline-block mt-1 text-xs font-bold text-white bg-brand-red/80 px-2 py-1 rounded">午餐：中式餐盒</span>
+                    </div>
+                    <div class="relative">
+                        <div class="absolute -left-[21px] top-1 w-3 h-3 bg-brand-blue rounded-full border-2 border-white"></div>
+                        <span class="text-brand-blue font-bold font-mono text-sm block mb-1">16:20 - 17:31</span>
+                        <p class="font-bold text-lg">搭乘火車 (莒光 6254次)</p>
+                        <p class="text-sm text-gray-500">蘇澳新站 <i class="ph-bold ph-arrow-right mx-1"></i> 花蓮站</p>
+                    </div>
+                    <div class="relative">
+                        <div class="absolute -left-[21px] top-1 w-3 h-3 bg-brand-green rounded-full border-2 border-white"></div>
+                        <span class="text-brand-green font-bold font-mono text-sm block mb-1">17:30~</span>
+                        <p class="font-bold text-lg">快樂賦歸</p>
+                        <p class="text-sm text-gray-500">返回可愛的家</p>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <!-- Checklist Tab -->
